syntax = "proto3";

option csharp_namespace = "AuthorisationService.Grpc";

package userauth;

service UserAuthService {
  rpc CheckUserById (CheckUserByIdRequest) returns (CheckUserByIdResponse);
  rpc MakeUserAdmin (MakeUserAdminRequest) returns (MakeUserAdminResponse);
}

message CheckUserByIdRequest {
  int32 id = 1;
}

message CheckUserByIdResponse {
  bool exists = 1;
}

message MakeUserAdminRequest {
  int32 userId = 1;
}

message MakeUserAdminResponse {
  bool success = 1;
}
